# FishHookToEverness

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchDeps.cmake
nte/: CMakeLists.txt  Info.plist.in
nte/src/: main.mm
payload/: CMakeLists.txt
payload/src/: fishhook_binds.h  fishhook_binds.mm  hud.h  hud.mm  log.h  log.mm  metal_hooks.h  metal_hooks.mm  payload.mm  state.h  state.mm  swizzle.h  swizzle.mm
